# my-pydantic-ai-cron

./: .env_example  .gitignore  LICENSE  README.md  data.csv  main.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: cron.yml
mycli/jobs/: ev_charging_growth.py
tests/integration/: test_ev_charging_tools.py
